Fix album covers
- Fix stretching
- Center images
- Bring the shadow back

--- a/app/assets/stylesheets/gallery.css.scss
+++ b/app/assets/stylesheets/gallery.css.scss
@@ -12,58 +12,48 @@
   text-align: center;
 
   li {
-    overflow: hidden;
+    position: relative;
+    float: left;
+    width: 50% - 3%;
+    height: 9 * $base-spacing-unit;
     margin-bottom: $half-spacing-unit;
     margin-right: $half-spacing-unit;
-    width: 50% - 3%;
     line-height: 0;
-    float: left;
+    border: 1px solid rgba($primary-color, .75);
+    box-shadow: 1px 1px 0 rgba(black, .25);
 
     @include media-query(palm) {
       width: auto;
     }
   }
 
-  figure {
-    @include box-shadow(rgba(black, .25) 1px 1px 0);
-    position: relative;
-    display: inline-block;
-    height: 9 * $base-spacing-unit;
-    border: 1px solid rgba($primary-color, .75);
-  }
-
   a {
-    $hover-color: $link-color;
-    &:hover {
-      img {
-        background: rgba($hover-color, .25);
-        border-color: rgba($hover-color, .75);
-      }
-      + figcaption {
-        background: rgba($hover-color, .75);
+    width: 100%;
+    height: 100%;
+    background-position: 50% 50%;
+    &:hover,
+    &:focus {
+      + .album_title {
+        background: rgba($link-color, .75);
         color: white;
       }
     }
   }
+}
 
-  figcaption {
-    @extend %transition-all;
-    $margin: 5px;
-    pointer-events: none;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: rhythm(.25) rhythm(.5);
-    line-height: $base-line-height;
-    color: rgba(black, .5);
-    border-top: 1px solid white;
-    background: rgba(white, .75);
-  }
-
-  img {
-    max-width: 100%;
-  }
+.album_title {
+  @extend %transition-all;
+  $margin: 5px;
+  pointer-events: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: rhythm(.25) rhythm(.5);
+  line-height: $base-line-height;
+  color: rgba(black, .5);
+  border-top: 1px solid white;
+  background: rgba(white, .75);
 }
 
 .album_photos {
